<resources>

    <string name="app_name">Dictionary</string>

    <!-- Common -->
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="bullet">\u2022</string>

    <!-- Network -->
    <string name="network_connection_error">No connection</string>
    <string name="network_not_found_error">Not found</string>
    <string name="network_unknown_error">Unknown error</string>

    <!-- MainActivity -->
    <string name="main_bottom_navigation_home">Home</string>
    <string name="main_bottom_navigation_discover">Discover</string>
    <string name="main_bottom_navigation_settings">Settings</string>

    <!-- HomeFragment -->
    <string name="home_empty_content">Your dictionary is currently empty.\nTap + to add a word there.</string>

    <!-- DiscoverFragment -->
    <string name="discover_empty_content">No relevant words found for your search.</string>

    <!-- WordsFilterDialog -->
    <string name="words_filter_frequency">Frequency:</string>
    <string name="words_filter_part_of_speech">Part of speech:</string>

    <!-- Frequency -->
    <string name="frequency_very_rare">Very rare</string>
    <string name="frequency_rare">Rare</string>
    <string name="frequency_normal">Normal</string>
    <string name="frequency_frequent">Frequent</string>
    <string name="frequency_very_frequent">Very frequent</string>

    <!-- PartOfSpeech -->
    <string name="part_of_speech_all">All</string>
    <string name="part_of_speech_unknown">Unknown</string>
    <string name="part_of_speech_noun">Noun</string>
    <string name="part_of_speech_pronoun">Pronoun</string>
    <string name="part_of_speech_adjective">Adjective</string>
    <string name="part_of_speech_verb">Verb</string>
    <string name="part_of_speech_adverb">Adverb</string>
    <string name="part_of_speech_preposition">Preposition</string>
    <string name="part_of_speech_conjunction">Conjunction</string>

    <!-- WordFragment -->
    <string name="word_syllables">Syllables:</string>
    <string name="word_frequency">Frequency:</string>
    <string name="word_definitions">Definitions</string>
    <string name="word_examples">Examples: </string>
    <string name="word_synonyms">Synonyms: </string>
    <string name="word_antonyms">Antonyms: </string>
    <string name="word_add_to_dictionary">Add to the dictionary</string>

    <!-- SearchWordActivity -->
    <string name="search_word_search_view_hint">Search a word</string>
    <string name="search_word_hint">Search a word and it will appear here.</string>
    <string name="search_word_no_result">No relevant word found for your search.</string>

    <!-- SettingsFragment -->
    <string name="settings_pronunciation">Select a pronunciation:</string>
    <string name="settings_pronunciation_uk">United Kingdom</string>
    <string name="settings_pronunciation_us">United States</string>
    <string name="settings_pronunciation_india">India</string>
    <string name="settings_pronunciation_australia">Australia</string>
    <string name="settings_voice">Select a voice:</string>
    <string name="settings_voice_test_phrase">London is the capital of Great Britain.</string>

    <!-- TextToSpeechService -->
    <string name="tts_cant_play">Can\'t play</string>

</resources>
