<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <TextView
        android:id="@+id/wordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        tools:text="Secret" />

    <!-- todo: Create a class "IconButton" or something. -->
    <LinearLayout
        android:id="@+id/speakButton"
        style="@style/Button.Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:layout_width="@dimen/button_icon_size"
            android:layout_height="@dimen/button_icon_size"
            app:srcCompat="@drawable/ic_speak" />

        <TextView
            android:id="@+id/pronunciationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding_small"
            android:textColor="@android:color/white"
            tools:text="'sikrɪt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/syllablesContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_syllables"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/syllablesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding_small"
            tools:text="Se-cret" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frequencyContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_frequency"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/frequencyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding_small"
            tools:text="Normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/definitionsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <include layout="@layout/view_divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_definitions"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/definitionsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>

</LinearLayout>